# AdventOfCode2025

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  day01.c  day02.c  day03.c  day04.c  day05.c
.cmake/api/v1/reply/: cache-v2-4c06fa2c8a73efd16fec.json  cmakeFiles-v1-9286bfda1cb6a897ce86.json  codemodel-v2-00ffafff959beb7b5bf4.json  index-2025-12-14T00-47-11-0771.json  target-day02-Debug-ddde2dde8b272a37aac0.json  target-day03-Debug-3139e91703a571310b24.json
